--- a/src/App.scss
+++ b/src/App.scss
@@ -5,7 +5,7 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(0, 0, 0, 0.87);
+  color: var(--color-font);
   background: var(--color-background);
 
   font-synthesis: none;
@@ -13,4 +13,10 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   max-width: 100vw;
+}
+
+.main {
+  max-width: 1295px;
+  padding: 0 2em;
+  margin: 0 auto;
 }
