adding style updates and new components

--- a/src/components/ui/Card/Card.scss
+++ b/src/components/ui/Card/Card.scss
@@ -24,4 +24,8 @@
     backdrop-filter: var(--blur-lg, blur(16px));
     -webkit-backdrop-filter: var(--blur-lg, blur(16px));
   }
+  &__lifted {
+    margin-top: -10rem;
+    z-index: 10;
+  }
 }
