--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,10 @@
 /* SCSS file converted from App.css */
+html {
+  min-height: 100%;
+  background: var(--color-background);
+  background-attachment: fixed;
+}
+
 #root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -6,13 +12,12 @@
 
   color-scheme: light dark;
   color: var(--color-font);
-  background: var(--color-background);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  max-width: 100vw;
+  // max-width: 100vw;
 }
 
 .main {
