--- a/src/App.scss
+++ b/src/App.scss
@@ -24,4 +24,52 @@ html {
   max-width: 1295px;
   padding: 0 2em;
   margin: 0 auto;
+  @media (max-width: 1024px) {
+    padding: 0 1em;
+  }
+}
+
+.hero {
+  position: relative;
+  min-height: 250px;
+  background-color: var(--color-foreground); // solid color base
+  margin-bottom: 2em;
+  padding: 2em;
+  border-radius: var(--radius-lg);
+  overflow: hidden;
+  min-width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 0em;
+  @media screen and (max-width: 768px) {
+    margin-top: 3em;
+    margin-bottom: 0;
+    align-items: start;
+    h1,
+    h2 {
+      margin: 0;
+    }
+  }
+
+  &__video {
+    aspect-ratio: 16 / 9;
+    width: 100%;
+    iframe {
+      width: 100%;
+      height: 100%;
+      border-radius: var(--radius-md);
+      border: none;
+      box-shadow: var(--shadow-card);
+    }
+  }
+}
+
+.stack-on-mobile {
+  @media (max-width: 768px) {
+    flex-direction: column !important;
+    align-items: center !important;
+    text-align: center !important;
+  }
 }
